# BuildPredict

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: catalog.yml  release.yml
public/catalog/: ATTRIBUTION.txt  accessory.json  capture-card.json  case-fan.json  case.json  cpu-cooler.json  cpu.json  gpu.json  headphones.json  keyboard.json  lighting.json  manifest.json  memory.json  microphone.json  monitor.json  motherboard.json  mouse.json  network-card.json  os.json  psu.json  sound-card.json  speakers.json  storage.json  thermal-compound.json  webcam.json
scripts/: install.ps1  install.sh  package-linux.sh  uninstall.sh
scripts/catalog/: normalize.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/pricing/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BuildPredictApp.tsx  BuilderTable.tsx  Navbar.tsx  PartBrowser.tsx  PredictionPanel.tsx  SettingsPanel.tsx  SummaryBar.tsx
src/data/: catalog-revision.json  cpus.ts  games.ts  gpus.ts  index.ts  memory.ts  perf-profiles.ts  workloads.ts
src/lib/: build-state.test.ts  build-state.ts  catalog.ts  categories.ts  types.ts
src/lib/compatibility/: compatibility.test.ts  index.ts
src/lib/predict/: coding.test.ts  coding.ts  gaming.test.ts  gaming.ts  index.ts
src/lib/pricing/: client.ts
