[package]
name = "buildpredict"
version = "0.1.0"
description = "PCPartPicker-style System Builder with gaming FPS and coding workload estimates"
authors = ["Nozzlenonsense"]
license = "MIT"
repository = "https://github.com/endergamershard-ctrl/BuildPredict"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
